--- a/src/pages/About/Team.css
+++ b/src/pages/About/Team.css
@@ -1,5 +1,5 @@
 .testimonials {
-    margin: -20px auto;
+    margin: -80px auto;
     margin-bottom: 105px;
     padding: 0 80px;
     position: relative;
